[tool.poetry]
name = "brewblox-spark-api"
version = "0.2.1"
description = "Client-side API for consuming Spark blocks"
authors = ["BrewPi.bv <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4"
brewblox-service = ">=0.33"

[tool.poetry.dev-dependencies]
pytest-flake8 = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
pytest = "*"
flake8-quotes = "*"
aresponses = "*"
mock = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
